--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,19 +1,3 @@
-.meow {
-  border: solid 1px black;
-  margin: 20px;
-}
-
-.compose-meow {
-  border: solid 1px black;
-  margin: 20px;
-}
-.single-meow {
-  border: solid 5px black;
-  margin: 20px;
-}
-
-button {
-  border: solid 1px black;
-  font-size: x-large;
-  margin: 20px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
