--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Custom CSS */
+.debug-border > * > * {
+  border: 1px solid red;
+}
+
+.debug-border > * {
+  border: 1px solid red;
+}
+
+.debug-border > {
+  border: 1px solid red;
+}
