refactor: Increase number of rows in ComposeMeow textarea to 15

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  border: 1px solid red;
+}
 /* Custom CSS */
 .debug-border > * > * {
   border: 1px solid red;
