refactor: Refactor Meow and child components with mobile-first approach (320x480)

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
+}
+
 /* * {
   border: 1px solid red;
 } */
