--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,11 +7,26 @@ body {
   overflow-x: hidden;
 }
 
+/*https://www.sitepoint.com/community/t/making-a-textarea-auto-fit-inside-a-div/6401/4*/
+#textbox {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block; /*reset from inline*/
+  width: 100%;
+  margin: 0; /*remove defaults*/
+  padding: 4px;
+  background: #eef;
+  border: 1px solid #333;
+  overflow-y: auto; /*resets IE*/
+  overflow-x: hidden; /*resets IE*/
+}
+
 body {
   position: relative;
 }
-/* 
-* {
+
+/* * {
   border: 1px solid red;
 } */
 
